# jsony-py

./: README.md  pyproject.toml
.github/workflows/: test-suite.yml
src/jsony/: __init__.py  _value.py  exceptions.py  literal.py
src/jsony/_funcs/: dig.py
tests/jsony/: test_literal.py
tests/jsony/_funcs/: test_dig.py
